<resources>
    <string name="app_name">I.Safety</string>
    <string name="usename">Email</string>
    <string name="password">Password</string>
    <string name="Login">Log In</string>
    <string name="Signup">Sign Up</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="already_account">Already have an account ?</string>
    <string name="Remeber_password">Remember Password ?</string>
    <string name="send_email">Send Email Reset Link</string>
    <string name="logout">Logout</string>
    <string name="user">User</string>
    <string name="police">Police</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="number">Phone number</string>
    <string name="save">Save</string>
    <string name="user_type">User Type:</string>
    <string name="admin">Admin</string>
    <string name="enabled">Enabled</string>
    <string name="title_activity_home_page">HomePage</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="add">Add</string>
    <string name="title_activity_current__location">Map</string>

</resources>
